<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_medium">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/favorite_product_img"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
        <LinearLayout  android:id="@+id/layout_item_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/favorite_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/favorite_product_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Brand Name"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/favorite_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/rs_3_277"
                android:textColor="#4CAF50"
                android:textSize="@dimen/text_size_xmedium" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_charge_free"
                android:textSize="@dimen/text_size_small"/>
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:text="@string/size_40"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="@dimen/view_width_small"
        android:background="@color/grey_light"
        android:layout_marginTop="@dimen/margin_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:weightSum="2">

        <LinearLayout android:id="@+id/layout_action1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/delete_favorite_item"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/deleteiconmdpi" />
        </LinearLayout>

        <View android:layout_width="@dimen/view_width_small"
            android:layout_height="match_parent"
            android:background="@color/grey_light"/>

        <LinearLayout android:id="@+id/layout_action2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_add_shopping_cart_brown_24dp" />
        </LinearLayout>





    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="@dimen/view_width_small"
        android:background="@color/grey_light"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
</LinearLayout>

